# bluise

./: .gitignore  LICENSE  README.md
res/: ExampleGameList.gll  Games copy.gll  Games.gll  Games.json  games.db
src/: AddWidget.cpp  AddWidget.h  AddWidget.qml  BeautifulButton.cpp  BeautifulButton.h  BeautifulButtonGroup.cpp  BeautifulButtonGroup.h  BoxOptionWidget.h  CMakeLists.txt  ChoosePictureWidget.cpp  ChoosePictureWidget.h  Dock.cpp  Dock.h  Dock.qml  FileValidator.cpp  FileValidator.h  GLLReader.cpp  GLLReader.h  Game.cpp  Game.h  GameAddWidget.cpp  GameAddWidget.h  GameEditWidget.cpp  GameEditWidget.h  GameInfoWidget.cpp  GameInfoWidget.h  GameInfoWidget.qml  GameInfoWidget.ui  GameLine.h  GameListModel.cpp  GameListModel.h  GameListWidget.cpp  GameListWidget.h  GameOptionWidget.cpp  GameOptionWidget.h  GameOptionsWidget.cpp  GameOptionsWidget.h  GameProxyModel.cpp  GameProxyModel.h  GameScrollArea.cpp  (+23 more)
src/BeautifulUI/: AbstractBeautifulButton.cpp  AbstractBeautifulButton.h  BeautifulButton.cpp  BeautifulButton.h  BeautifulButtonGroup.cpp  BeautifulButtonGroup.h  MenuButton.cpp  MenuButton.h  OptionButton.cpp  OptionButton.h
src/BluiseCore/: FileValidator.cpp  FileValidator.h  Game.cpp  Game.h  GameScanner.cpp  GameScanner.h  IconHandler.cpp  IconHandler.h  Settings.cpp  Settings.h  bluise.cpp  bluise.h  bluise_error.h  invalid_path.h
src/ModelView/: CoverDelegate.cpp  CoverDelegate.h  GameListModel.cpp  GameListModel.h  GameProxyModel.cpp  GameProxyModel.h
src/Sync/: GoogleDriveManager.cpp  GoogleDriveManager.h  UploadWorker.cpp  UploadWorker.h
src/Widgets/: AddGameOptionsWidget.cpp  AddGameOptionsWidget.h  AddGameWidget.cpp  AddGameWidget.h  AddLocalInstalledGameWidget.cpp  AddLocalInstalledGameWidget.h  BoxOptionWidget.cpp  BoxOptionWidget.h  ChoosePictureWidget.cpp  ChoosePictureWidget.h  EditGameWidget.cpp  EditGameWidget.h  GameAddWidget.cpp  GameAddWidget.h  GameEditWidget.cpp  GameEditWidget.h  GameInfoWidget.cpp  GameInfoWidget.h  GameOptionWidget.cpp  GameOptionWidget.h  GameOptionsWidget.cpp  GameOptionsWidget.h  ScanForGamesWidget.cpp  ScanForGamesWidget.h  SearchBar.cpp  SearchBar.h  SettingsWidget.cpp  SettingsWidget.h  ToolBar.cpp  ToolBar.h
src/command_line/: command_processor.cpp  command_processor.h
src/command_line_ui/: GameLine.cpp  GameLine.h  Menu.cpp  Menu.h  buttons.h  ncurses_ui.cpp  ncurses_ui.h  winmaker.cpp
src/main/: CMakeLists.txt  GLLReader.cpp  GLLReader.h  Game.cpp  Game.h  bluise.cpp  bluise.h  bluise_error.h  gll_syntax_error.h  invalid_path.h
src/qt/: GameDelegate.cpp  GameDelegate.h  GameListModel.cpp  GameListModel.h  GameListView.cpp  GameListView.h  GameListWidget.cpp  GameListWidget.h  GameWidget.cpp  GameWidget.h  QGame.cpp  QGame.h  main.cpp
